# velero-mcp

./: .env.example  AGENT.md  Dockerfile  README.md  agent.yaml  kmcp.yaml  pyproject.toml  rbac.yaml
.github/workflows/: tests.yml
docs/: companion-guide.md
scripts/: 00-prereqs.sh  01-bootstrap.sh  02-workload-cluster.sh  03-velero-install.sh  04-backup.sh  05-simulate-failure.sh  06-recover.sh  07-verify.sh  08-cleanup.sh  helpers.sh
scripts/config/: clusterctl.yaml
src/: main.py
src/core/: __init__.py  k8s.py  policy.py  server.py  utils.py  velero.py
src/tools/: __init__.py  list_backups.py  restore_backup.py  trigger_backup.py
tests/: test_list_backups.py  test_policy.py  test_restore_backup.py  test_server.py  test_tools.py  test_trigger_backup.py  test_velero.py
