[project]
name = "velero"
version = "0.1.0"
description = "velero MCP server built with FastMCP"
authors = [
    {name = "Unknown Author"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp==3.0.0",
    "pydantic==2.12.5",
    "pyyaml==6.0.3",
    "python-dotenv==1.2.1",
    "kubernetes==31.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
"velero-server" = "src.main:main"
dev = "src.main:dev"
dev-http = "src.main:dev"
start = "src.main:start"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "black==26.1.0",
    "mypy==1.19.1",
    "ruff==0.15.1",
    "types-PyYAML==6.0.12.20250915",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "kubernetes.*"
ignore_missing_imports = true 